Fix cart collapse

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -64,6 +64,14 @@
     width: 20%;
 }
 
+.vw-90 {
+    width: 90vw;
+}
+
+.top-15 {
+    top: 12%;
+}
+
 img {
     cursor: pointer;
 }
